# Statistical-Learning-Notebook

./: pyproject.toml
10. Unsupervised Learning/: Unsupervised Learning.ipynb
2. Statistical Learning/: Conceptual Exercises.ipynb  Statistical Learning.ipynb
3. Linear Regression/: Conceptual Exercises.ipynb  Linear Regression.ipynb
4. Classification/: Classification.ipynb  Conceptual Exercises.ipynb
5. Resampling Methods/: Conceptual Exercises.ipynb  Resampling Methods.ipynb
6. Linear Model Selection and Regularization/: Linear Model Selection and Regularization.ipynb
7. Moving Beyond Linearity/: Moving Beyond Linearity.ipynb
8. Tree-Based Methods/: Tree-Based Methods.ipynb
9. Support Vector Machines/: Support Vector Machines.ipynb
